--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,18 +1,20 @@
-<dimen name="padding_2dp">2dp</dimen>
-<dimen name="padding_5dp">5dp</dimen>
-<dimen name="padding_10dp">10dp</dimen>
-<dimen name="padding_15dp">15dp</dimen>
-<dimen name="padding_20dp">20dp</dimen>
-<dimen name="padding_25dp">25dp</dimen>
-<dimen name="padding_30dp">30dp</dimen>
-<dimen name="padding_35dp">35dp</dimen>
-<dimen name="padding_40dp">40dp</dimen>
-<dimen name="padding_45dp">45dp</dimen>
-<dimen name="padding_50dp">50dp</dimen>
+<resources>
+    <dimen name="padding_2dp">2dp</dimen>
+    <dimen name="padding_5dp">5dp</dimen>
+    <dimen name="padding_10dp">10dp</dimen>
+    <dimen name="padding_15dp">15dp</dimen>
+    <dimen name="padding_20dp">20dp</dimen>
+    <dimen name="padding_25dp">25dp</dimen>
+    <dimen name="padding_30dp">30dp</dimen>
+    <dimen name="padding_35dp">35dp</dimen>
+    <dimen name="padding_40dp">40dp</dimen>
+    <dimen name="padding_45dp">45dp</dimen>
+    <dimen name="padding_50dp">50dp</dimen>
 
-<dimen name="padding_55dp">55dp</dimen>
-<dimen name="padding_60dp">60dp</dimen>
-<dimen name="padding_65dp">65dp</dimen>
-<dimen name="padding_70dp">70dp</dimen>
-<dimen name="padding_75dp">75dp</dimen>
-<dimen name="padding_80dp">80dp</dimen>
+    <dimen name="padding_55dp">55dp</dimen>
+    <dimen name="padding_60dp">60dp</dimen>
+    <dimen name="padding_65dp">65dp</dimen>
+    <dimen name="padding_70dp">70dp</dimen>
+    <dimen name="padding_75dp">75dp</dimen>
+    <dimen name="padding_80dp">80dp</dimen>
+</resources>
